syntax = "proto3";

message TestMessage {
    string stringValue = 1;
}

message AnotherMessageWithEnum {
    enum AnotherTestEnum {
        ZERO = 0;
        ONE = 1;
        TWO = 2;
    }
    AnotherTestEnum e = 1;
}

message MessageWithEnum {
    enum TestEnum {
        ZERO = 0;
        ONE = 1;
        TWO = 2;
    }
    TestEnum e = 1;
}

message ValidateMe {
    string notempty = 1;
    map<string, string> validate_map = 2;
    TestMessage nested = 3;
    repeated string repeated_string = 4;
}